WEB-02: Change Header, fix shaking on scroll, change position of scroll-up, fixing problem with side not react to url, styling scrollbar in about page

--- a/src/components/header/header.style.css
+++ b/src/components/header/header.style.css
@@ -25,7 +25,6 @@
         gap: 1rem;
         color: rgb(var(--text));
         margin-left: 1rem;
-        line-height: 0;
     }
 
     .logo > svg {
